2014-03-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Comment for range error check in aopIsLitVal(), improve range checks in snprintf() calls, prepare for refactored version of patch #232.

2014-03-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version,
	* doc/INSTALL.txt,
	* doc/sdccman.lyx: version 3.4.0

2014-03-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Applied patch #227 by Ben Shi to fix jumping on float in y and to speed up jumping on byte in yl.
	* device/lib/z80/setjmp.s:
	  Slightly more efficient longjmp().
	* device/lib/stm8/setjmp.s,
	  support/regression/tests/setjmp.c:
	  Implement setjmp() / longjmp() for stm8.
	* src/z80/ralloc2.cc:
	  Allow use of hl in 16-bit additions with global variables as long as de or bc is free.

2014-03-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* doc/sdccman.lyx:
	  Fix example in documentation on named address spaces in ROM.

2014-03-09 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/non-free/include/pic14/pic*.h,
	  device/non-free/include/pic16/pic18f*.h,
	  device/non-free/lib/pic14/libdev/pic*.c,
	  device/non-free/lib/pic16/libdev/pic18f*.c:
	  Regenerate the DEVICE.[ch] files with the cinc2h.pl program.

2014-03-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCpeeph.c (notVolatileVariable): fixed strchr params

2014-03-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/stm8/gen.c: retry to revert previous two changes

2014-02-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/stm8/gen.c: reverted previous two changes (not committed)
	* .version,
	* doc/INSTALL.txt,
	* doc/sdccman.lyx: version 3.4.0 rc1
	* sdcc.spec: version 3.4.0

2014-02-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Simplify and improve ifx code generation.

2014-02-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Applied patch #227 by Ben Shi to fix jumping on float in y and to speed up jumping on byte in yl.
