@@ -1,6 +1,11 @@
 2014-03-28 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
+	  Improve ifx code generation.
+
+2014-03-28 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
 	  Comment for range error check in aopIsLitVal(), improve range checks in snprintf() calls, prepare for refactored version of patch #232.
 
 2014-03-22 Maarten Brock <sourceforge.brock AT dse.nl>
